fix hotneed and voucher
