# storage/api-docs/api-docs.json
@@ -2504,7 +2504,6 @@
                     "Hot-needs"
                 ],
                 "summary": "Get list of hot-needs",
-                "operationId": "App\\Http\\Controllers\\HotNeedController::getHotNeedByUser",
                 "parameters": [
                     {
                         "name": "page",
@@ -2597,6 +2596,104 @@
             }
         },
         "/api/hot-needs/{id}": {
+            "get": {
+                "tags": [
+                    "Hot-needs"
+                ],
+                "summary": "Get list of hot-needs",
+                "operationId": "App\\Http\\Controllers\\HotNeedController::getHotNeedByUser",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "category",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errcode": {
+                                            "description": "The response code",
+                                            "type": "integer"
+                                        },
+                                        "errmsg": {
+                                            "description": "The response message",
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "description": "The response data",
+                                            "type": "array",
+                                            "items": {}
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "id": 1,
+                                        "topic": "Off road trails in/around Danang for bicycling",
+                                        "city": "Da Nang",
+                                        "category_id": 5,
+                                        "expected_deadline": "2020-05-31 00:00:00",
+                                        "brief_description": "I am planning to move to Danang from Thailand and am trying to figure out where I can find off-road cycling trails around Danang to ride my mountain bike.",
+                                        "full_description": "Hi folks,<br></br>I am planning to move to Danang from Thailand and am trying to figure out where I can find off-road cycling trails around Danang to ride my mountain bike.<br></br>We have many of them here in Chiang Mai, and I know they probably exists around Danang too, probably up around Thọ Quang, since I see a lot of trails up there on topo maps, but I cant find any information about trails that are suitable for a mountain bike when I google.<br></br>I really like off-road trails as opposed to paved roads, so I would appreciate any help/advice someone might be able to offer.<br></br>Thanks!",
+                                        "user_id": 1,
+                                        "created_at": null,
+                                        "updated_at": null,
+                                        "user": {
+                                            "id": 1,
+                                            "name": "Super Admin",
+                                            "avatar": "https://storage.googleapis.com/conext-develop/avatar1.png"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "404": {
+                        "description": "HotNeed not found",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "405": {
+                        "description": "Validation exception",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                }
+            },
             "put": {
                 "tags": [
                     "Hot-needs"
@@ -2621,13 +2718,37 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "name": {
+                                    "topic": {
                                         "type": "string"
+                                    },
+                                    "city": {
+                                        "type": "string"
+                                    },
+                                    "category_id": {
+                                        "type": "string"
+                                    },
+                                    "expected_deadline": {
+                                        "type": "string"
+                                    },
+                                    "brief_description": {
+                                        "type": "string"
+                                    },
+                                    "full_description": {
+                                        "type": "string"
+                                    },
+                                    "user_id": {
+                                        "type": "integer"
                                     }
                                 },
                                 "type": "object",
                                 "example": {
-                                    "name": "name not need nha"
+                                    "topic": "Hot Need 1",
+                                    "city": "Da Nang",
+                                    "category_id": 5,
+                                    "expected_deadline": "2020-05-31",
+                                    "brief_description": "hahah",
+                                    "full_description": "hihihi",
+                                    "user_id": 1
                                 }
                             }
                         }
@@ -2670,9 +2791,7 @@
                         "bearer": []
                     }
                 ]
-            }
-        },
-        "api/hot-needs/{id}": {
+            },
             "delete": {
                 "tags": [
                     "Hot-needs"
@@ -3762,6 +3881,13 @@
                 "parameters": [
                     {
                         "name": "page",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "type",
                         "in": "query",
                         "schema": {
                             "type": "integer"
